<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
    />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="15dp"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_weight="1"
        android:scrollbars="vertical"
    />

    <Button
        android:id="@+id/buttonStartPretest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start_pretest"
    />

</LinearLayout>